feat: generate javadocs via maven plugin